--- a/.github/workflows/reformat-java.yml
+++ b/.github/workflows/reformat-java.yml
@@ -1,5 +1,5 @@
 name: backend - reformat-java
-on: [push, pull_request, pull_request_review]
+on: push
 
 jobs:
   replace-google-format:
@@ -9,10 +9,4 @@ jobs:
       - uses: axel-op/googlejavaformat-action@v3
         with:
           commit-message: 'style : Google Java Format ${{ github.head_ref }}'
-          args: '--replace --aosp \
-           --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED \
-           --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED \
-           --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED \
-           --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED \
-           --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED \
-           --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+          args: '--replace --aosp'
